--- a/static-s3-with-cloud-front/website/Index.html/index.html
+++ b/static-s3-with-cloud-front/website/Index.html/index.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tommy's Cloud Resume</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tommy's Cloud Resume</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Fira Sans', sans-serif;
+      background: #f2f7fb;
+      color: #222;
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    h1 {
+      color: #007acc;
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #555;
+      margin-bottom: 40px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    li {
+      background: #fff;
+      margin: 12px 0;
+      padding: 15px;
+      border-left: 6px solid #007acc;
+      border-radius: 5px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      font-size: 1em;
+    }
+
+    footer {
+      margin-top: 50px;
+      color: #888;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-    <h1>Tommy's Cloud Resume</h1>
-    <p>Welcome! This is my first AWS static site hosted on S3 with CloudFront.</p>
-    <ul>
-        <li>Aspiring Cloud Engineer</li>
-        <li>Learning AWS S3 and CloudFront</li>
-        <li>Building my cloud portfolio</li>
-    </ul>
+
+  <h1>👋 Hey there, I'm Charles</h1>
+  <p>This is my first AWS static site — hosted on S3 and delivered via CloudFront. 💨</p>
+
+  <ul>
+    <li>🚀 Aspiring Cloud Engineer on the rise</li>
+    <li>🧠 Learning AWS, one service at a time</li>
+    <li>🛠️ Hands-on with S3, CloudFront, GitHub Actions</li>
+    <li>📈 Building a real cloud resume, from scratch</li>
+  </ul>
+
+  <footer>
+    Built with 💻 + ☁️ by Tommy813 &mdash; Est. 2025
+  </footer>
+
 </body>
 </html>
